[package]
name = "kafcat"
version = "0.1.1"
authors = ["qiujiangkun <qiujiangkun@foxmail.com>"]
edition = "2018"
description = "cat but with kafka"
repository = "https://github.com/qiujiangkun/kafcat"
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = "0.25.0"
kafka = "0.8.0"
clap = "3.0.0-beta.2" #  wait for 3.0.0
log = "0.4.14"
env_logger = "0.8.3"
tokio = { version = "1", features = ["full"] }
futures = "0.3.12"
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0.0"
slab = "0.4"
backoff = "0.1.5"
chrono = "0.4.0"
rand = "0.3.15"
regex = "1.1.6"
lazy_static = "1.4.0"
strum = { version = "0.20", features = ["derive"] }
pin-project-lite = "0.2.4"
async-trait = "0.1.42"
anyhow = "1.0.38"
thiserror = "1.0.24"
pin-utils = "0.1.0"
async-stream = "0.3.0"
