[package]
name = "kafcat"
version = "0.1.3"
authors = ["qiujiangkun <qiujiangkun@foxmail.com>"]
edition = "2021"
description = "cat but with kafka"
repository = "https://github.com/qiujiangkun/kafcat"
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = { version = "0.34.0", features = ["ssl-vendored"] }
kafka = "0.10.0"
clap = { version = "3", features = ["cargo"] }
log = "0.4.14"
env_logger = "0.10.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3.12"
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0.0"
slab = "0.4"
backoff = "0.4"
chrono = "0.4.0"
rand = "0.8"
regex = "1.1.6"
lazy_static = "1.4.0"
strum = { version = "0.25.0", features = ["derive"] }
pin-project-lite = "0.2.4"
async-trait = "0.1.42"
anyhow = "1.0.38"
thiserror = "1.0.24"
pin-utils = "0.1.0"
async-stream = "0.3.0"
serde_yaml = "0.9.25"
shellexpand = "3.1.0"
openssl = { version = "*", features = ["vendored"] }

[dev-dependencies]
assert_cmd = "2"
